<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_menu_search"
        android:icon="@drawable/ic_search_white_18dp"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
        android:id="@+id/item_menu_remove_all"
        android:icon="@drawable/ic_delete_forever_white_18dp"
        android:title="@string/menu_delete_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_menu_user"
        android:icon="@drawable/ic_account_circle_white_18dp"
        android:title="@string/menu_logout"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/sub_item_menu_log_out"
                android:title="@string/menu_logout" />
        </menu>

    </item>
</menu>