<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/velvetSunEnd"
    tools:context=".controller.EditTaskFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/gradient"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/background_edit_task"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/textView_taskTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </ImageView>

        <ImageView
            android:id="@+id/editImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/task_edit_image"
            android:foregroundGravity="center"
            android:src="@drawable/ic_pencil"
            app:layout_constraintBottom_toBottomOf="@id/gradient"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gradient" />

        <TextView
            android:id="@+id/textView_taskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="20dp"
            android:text="@string/task_title"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/form_Title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gradient"></TextView>

        <EditText
            android:id="@+id/form_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="19dp"
            android:hint="@string/task_title"
            android:inputType="text"
            android:maxLength="12"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/textView_taskDescription"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_taskTitle"></EditText>

        <TextView
            android:id="@+id/textView_taskDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="20dp"
            android:text="@string/task_description"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/form_taskDescription"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/form_Title"></TextView>

        <EditText
            android:id="@+id/form_taskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="19dp"
            android:hint="@string/task_description"
            android:inputType="textLongMessage"
            android:maxLines="3"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/edit_task_button_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_taskDescription"></EditText>

        <Button
            android:id="@+id/edit_task_button_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="18dp"
            android:backgroundTint="@color/velvetSunFirst"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/edit_task_button_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/form_taskDescription" />

        <Button
            android:id="@+id/edit_task_button_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="18dp"
            android:backgroundTint="@color/velvetSunFirst"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/textView_radioButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_task_button_date" />

        <TextView
            android:id="@+id/textView_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="5dp"
            android:text="@string/task_state"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/radioGroup_taskState"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_task_button_time" />


        <RadioGroup
            android:id="@+id/radioGroup_taskState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_radioButton">

            <RadioButton
                android:id="@+id/radioButton_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:buttonTint="@color/colorRadioButton"
                android:padding="2dp"
                android:text="@string/done_state"
                android:textAllCaps="true" />

            <RadioButton
                android:id="@+id/radioButton_doing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:buttonTint="@color/colorRadioButton"
                android:padding="2dp"
                android:text="@string/doing_state"
                android:textAllCaps="true" />

            <RadioButton
                android:id="@+id/radioButton_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:buttonTint="@color/colorRadioButton"
                android:padding="2dp"
                android:text="@string/todo_state"
                android:textAllCaps="true" />

        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>