<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card"
    android:foregroundGravity="center"
    tools:context=".controller.SignUpFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#D8FFFFFF"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center_horizontal">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/plus_sign"
                android:contentDescription="@string/button_sign_up"
                app:layout_constraintBottom_toBottomOf="@+id/iv_login"
                app:layout_constraintEnd_toEndOf="@+id/iv_login"
                app:layout_constraintStart_toEndOf="@+id/iv_login"
                app:layout_constraintTop_toTopOf="@+id/iv_login" />

            <ImageView
                android:id="@+id/iv_login"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/user_login"
                android:contentDescription="@string/button_sign_up"
                app:layout_constraintBottom_toTopOf="@+id/tv_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="32dp"
                android:layout_height="1.5dp"
                android:background="#333333"
                app:layout_constraintBottom_toBottomOf="@+id/tv_login"
                app:layout_constraintEnd_toStartOf="@+id/tv_login"
                app:layout_constraintTop_toTopOf="@+id/tv_login" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/allicia"
                android:foregroundGravity="center_vertical"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/button_sign_up"
                android:textColor="#222222"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_login"
                tools:targetApi="jelly_bean" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="1.5dp"
                android:background="#333333"
                app:layout_constraintBottom_toBottomOf="@+id/tv_login"
                app:layout_constraintStart_toEndOf="@+id/tv_login"
                app:layout_constraintTop_toTopOf="@+id/tv_login" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/form_sign_up_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:foregroundGravity="center_horizontal"
                android:textColor="#ffffff"
                android:textColorHint="#fafafa"
                app:counterEnabled="true"
                app:counterMaxLength="12"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_sign_up_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edit_text"
                    android:drawableStart="@drawable/ic_action_person_plus"
                    android:drawableLeft="@drawable/ic_action_person_plus"
                    android:hint="@string/username_hint"
                    android:inputType="text"
                    android:paddingStart="8dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="11dp"
                    android:paddingBottom="11dp"
                    android:textColor="#ffffff"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/form_sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:foregroundGravity="center_horizontal"
                android:textColor="#ffffff"
                android:textColorHint="#fafafa"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/form_sign_up_username"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#CD000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_sign_up_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edit_text"
                    android:drawableStart="@drawable/ic_action_lock"
                    android:drawableLeft="@drawable/ic_action_lock"
                    android:hint="@string/password_hint"
                    android:inputType="numberPassword"
                    android:paddingStart="8dp"
                    android:paddingLeft="8dp"
                    android:textColor="#ffffff"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/form_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="24dp"
                android:foregroundGravity="center_horizontal"
                android:inputType="numberPassword"
                android:textColor="#ffffff"
                android:textColorHint="#fafafa"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/form_sign_up_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#CD000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edit_text"
                    android:drawableStart="@drawable/ic_action_lock"
                    android:drawableLeft="@drawable/ic_action_lock"
                    android:hint="@string/confirm_password_hint"
                    android:inputType="numberPassword"
                    android:paddingStart="8dp"
                    android:paddingLeft="8dp"
                    android:textColor="#ffffff"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/background_button"
                android:text="@string/button_sign_up"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/form_confirm_password" />

            <TextView
                android:id="@+id/bottom_line"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="24dp"
                android:background="#333333"
                app:layout_constraintBottom_toTopOf="@id/tv_member"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />

            <TextView
                android:id="@+id/tv_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="32dp"
                android:text="@string/tv_already_a_member"
                android:textColor="#333333"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_go_to_login"
                app:layout_constraintTop_toBottomOf="@id/bottom_line" />

            <TextView
                android:id="@+id/tv_go_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="32dp"
                android:layout_marginStart="4dp"
                android:text="@string/button_login"
                android:textColor="@color/pink"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv_member"
                app:layout_constraintStart_toEndOf="@+id/tv_member"
                app:layout_constraintTop_toBottomOf="@id/bottom_line"
                android:layout_marginLeft="4dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>